# demo-gnews-remotemcp-auth

./: .env  .gitignore  README.md  gnews.py  main.py  pyproject.toml
